[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scenes/GrumpyQuestion.gd" type="Script" id=1]
[ext_resource path="res://Art/Minigame art/Throwgarbage/CatAnimation1/cat_1.png" type="Texture" id=2]
[ext_resource path="res://Scenes/SpeechBubble.tscn" type="PackedScene" id=4]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Art/Pixeltype.ttf"

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Art/Pixeltype.ttf"

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Art/Pixeltype.ttf"

[sub_resource type="DynamicFont" id=6]
size = 48
font_data = SubResource( 5 )

[node name="main" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -416, 569 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 2 )

[node name="SpeechBubble" parent="." instance=ExtResource( 4 )]
position = Vector2( 466, 169 )

[node name="Button" type="Button" parent="."]
margin_left = 560.0
margin_top = 780.0
margin_right = 910.0
margin_bottom = 980.0
custom_fonts/font = SubResource( 2 )

[node name="Button2" type="Button" parent="."]
margin_left = 1000.0
margin_top = 780.0
margin_right = 1350.0
margin_bottom = 980.0
custom_fonts/font = SubResource( 4 )

[node name="Button3" type="Button" parent="."]
margin_left = 1440.0
margin_top = 780.0
margin_right = 1790.0
margin_bottom = 980.0
custom_fonts/font = SubResource( 6 )

[connection signal="fly_in_finished" from="." to="." method="_on_main_fly_in_finished"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
